fix(styles): correct number display on mobile and tablet, improve responsiveness

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -140,6 +140,11 @@ $header-top-mobile--height: 86px;
   &:hover::after {
     transform: translateY(-50%) scaleX(1);
     opacity: 1;
+
+    @include respond-to(tablet, mobile) {
+      transform: translateY(-50%) scaleX(0);
+      opacity: 0;
+    }
   }
 }
 
